# SensorUtils

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.linux64  README.md  SensorUtils.cpp  SensorUtils.h
cmake/: gtest.cmake
include/sensorcore/: Sensor.h  sensorcore.h
include/sensormath/: SensorMath.h
include/sensormodel/: CSMSensorModel.h  SensorModel.h  SensorModelFactory.h
include/sensorutils/: SensorUtils.h
include/shapemodel/: BiAxialEllipsoid.h  ShapeModel.h  ShapeModelFactory.h
recipes/: build.sh  meta.yaml
sensormath/: SensorMath.cpp
src/: SensorUtils.cpp
src/sensorcore/: Sensor.cpp
src/sensormath/: SensorMath.cpp
src/sensormodel/: CSMSensorModel.cpp  SensorModelFactory.cpp
src/shapemodel/: BiAxialEllipsoid.cpp  ShapeModelFactory.cpp
tests/: CMakeLists.txt  SensorCoreTesting.cpp  SensorMathTesting.cpp  SensorModelTesting.cpp  SensorUtilsTesting.cpp  ShapeModelTesting.cpp  TestyMcTestFace.cpp  phaseAngleTest.cpp
